[package]
name = "imc"
version = "0.1.0"
edition = "2024"

[features]
default = []
async = []
tokio = ["dep:tokio", "async"]
invalidation-redis = ["dep:redis"]
logging = ["dep:tracing"]
metrics-prometheus = ["dep:prometheus"]
critical = ["invalidation-redis", "dep:imc-derive"]

[dependencies]
redis = { version = "0.27", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", optional = true }
prometheus = { version = "0.13", optional = true }
imc-derive = { path = "imc-derive", optional = true }

[dev-dependencies]
serial_test = "3"
