[package]
name = "imc-derive"
version = "0.1.0"
description = "Proc-macro derive for CriticalKey in the imc caching library"
license = "MIT"
repository = "https://github.com/gaurav1704/rust-imc"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
